langtools/test/tools/javac/proprietary/WarnClass.out
WarnClass.java:13:40: compiler.warn.sun.proprietary: sun.misc.Lock
- compiler.err.warnings.and.werror
1 error
1 warning
